# emscripten-fastcomp-clang

./: CMakeLists.txt  OWNERS  README.txt  codereview.settings
bindings/python/clang/: cindex.py
docs/: ReleaseNotes.rst
include/clang/Basic/: Attr.td  AttrDocs.td  Builtins.def  TargetCXXABI.h
include/clang/Driver/: CC1Options.td  Options.td
include/clang/Frontend/: CodeGenOptions.def
lib/AST/: ASTContext.cpp
lib/Basic/: Targets.cpp  Version.cpp
lib/CodeGen/: BackendUtil.cpp  CGBuiltin.cpp  CGDecl.cpp  CGExprAgg.cpp  CGExprComplex.cpp  CGStmt.cpp  CGVTables.cpp  CodeGenFunction.cpp  CodeGenModule.cpp  CodeGenModule.h  ItaniumCXXABI.cpp  TargetInfo.cpp  TargetInfo.h
lib/Driver/: CMakeLists.txt  Driver.cpp  ToolChains.cpp  ToolChains.h  Tools.cpp  Tools.h
lib/Frontend/: CompilerInvocation.cpp  InitHeaderSearch.cpp
lib/Sema/: SemaChecking.cpp
test/: lit.cfg
test/CodeGen/: emscripten-arguments.c  emscripten-regparm.c  instrument-functions-size.c  instrument-functions.c  libcalls.c  malign-double-x86-nacl.c  target-data.c  volatile-1.c  volatile-complex.c
test/CodeGenCXX/: instrument-functions-size.cpp  instrument-functions.cpp  member-function-pointers.cpp  static-init-emscripten.cpp  thunks.cpp  x86_64-arguments-nacl-x32.cpp
test/Driver/: asmjs-unknown-emscripten.cpp  le32-unknown-nacl.cpp  nacl-direct.c
test/Frontend/: asmjs-types.cpp
test/Preprocessor/: init.c
tools/: CMakeLists.txt
tools/driver/: CMakeLists.txt  Makefile  cc1as_main.cpp
unittests/ASTMatchers/: CMakeLists.txt
unittests/Tooling/: CMakeLists.txt
(+7 files in other folders)
